# pylectronics

./: .coveragerc  .gitignore  .prospector.yml  LICENSE  README.md  mypy.ini  pyproject.toml  run_tests.sh
.github/workflows/: static_validate_and_test.yaml
src/: adders.py  logic_gates.py  memories.py  transistors.py
tests/: test_adders.py  test_logic_gates.py  test_memories.py  test_transistors.py  utils.py
