[tool.poetry]
name = "pylectronics"
version = "0.1.0"
description = ""
authors = ["Filipe Garcia"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "0.910"
pytest = "6.2.4"
black = "21.7b0"
bandit = "1.7.0"
prospector = "1.5.0"
pytest-coverage = "^0.0"
pytest-xdist = "^2.3.0"
pytest-socket = "^0.4.1"
pyroma = "^3.2"
vulture = "^2.3"
semgrep = "^0.63.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
